vendor/fixed-macro/tests/compile-fail/float-suffix.rs
fn main() {
    fixed_macro::fixed!(123.45f64: U4F4);
}
