vendor/fixed-macro/tests/compile-fail/float-suffix.stderr
error: invalid fixed value: unexpected suffix
 --> $DIR/float-suffix.rs:2:25
  |
2 |     fixed_macro::fixed!(123.45f64: U4F4);
  |                         ^^^^^^^^^
